[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/Money/Shrub.png" type="Texture" id=1]
[ext_resource path="res://Money/Shrub.gd" type="Script" id=2]
[ext_resource path="res://Shrubs.tres" type="Material" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.5, 17.4828 )

[node name="Shrub" type="Area2D"]
z_index = -1
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 17.5, 17.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 17.5, 17.5 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Shrub_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Shrub_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
